[package]
name = "gitlab-mr-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
futures = "0.3.21"
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = "0.11.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde_derive = "1.0.131"

[features]
